--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,14 @@
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.8.7.jar"/>
 	<classpathentry kind="lib" path="lib/jdatepicker-1.3.4.jar"/>
+	<classpathentry kind="lib" path="lib/itext-pdfa-5.5.5-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/itext-pdfa-5.5.5-sources.jar"/>
+	<classpathentry kind="lib" path="lib/itext-pdfa-5.5.5.jar"/>
+	<classpathentry kind="lib" path="lib/itext-xtra-5.5.5-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/itext-xtra-5.5.5-sources.jar"/>
+	<classpathentry kind="lib" path="lib/itext-xtra-5.5.5.jar"/>
+	<classpathentry kind="lib" path="lib/itextpdf-5.5.5-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/itextpdf-5.5.5-sources.jar"/>
+	<classpathentry kind="lib" path="lib/itextpdf-5.5.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
