--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/itextpdf-5.5.5-javadoc.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/itextpdf-5.5.5-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/itextpdf-5.5.5.jar"/>
+	<classpathentry kind="lib" path="Assets"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
