--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/itextpdf-5.5.5-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/itextpdf-5.5.5.jar"/>
 	<classpathentry kind="lib" path="Assets"/>
+	<classpathentry kind="lib" path="lib/gson-2.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
