--- a/.classpath
+++ b/.classpath
@@ -2,20 +2,20 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry exported="true" kind="lib" path="forms-1.3.0.jar" sourcepath="forms-1.3.0-src.zip"/>
-	<classpathentry exported="true" kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
-	<classpathentry exported="true" kind="lib" path="lib/sqlite-jdbc-3.8.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jdatepicker-1.3.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/itext-pdfa-5.5.5-javadoc.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/itext-pdfa-5.5.5-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/itext-pdfa-5.5.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/itext-xtra-5.5.5-javadoc.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/itext-xtra-5.5.5-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/itext-xtra-5.5.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/itextpdf-5.5.5-javadoc.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/itextpdf-5.5.5-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/itextpdf-5.5.5.jar"/>
 	<classpathentry kind="lib" path="Assets"/>
+	<classpathentry kind="lib" path="lib/itext-pdfa-5.5.8-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/itext-pdfa-5.5.8-sources.jar"/>
+	<classpathentry kind="lib" path="lib/itext-pdfa-5.5.8.jar"/>
+	<classpathentry kind="lib" path="lib/itext-xtra-5.5.8-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/itext-xtra-5.5.8-sources.jar"/>
+	<classpathentry kind="lib" path="lib/itext-xtra-5.5.8.jar"/>
+	<classpathentry kind="lib" path="lib/itextpdf-5.5.8-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/itextpdf-5.5.8-sources.jar"/>
+	<classpathentry kind="lib" path="lib/itextpdf-5.5.8.jar"/>
+	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.8.11.2.jar"/>
+	<classpathentry kind="lib" path="lib/xmlworker-5.5.8-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/xmlworker-5.5.8-sources.jar"/>
+	<classpathentry kind="lib" path="lib/xmlworker-5.5.8.jar"/>
 	<classpathentry kind="lib" path="lib/gson-2.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
